[package]
name = "taskforge-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
serde_json = "1"
taskforge-core = { path = "../task-core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
testcontainers = "0.27.1"
