[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rustly-dispatch"
version = "0.1.0"
description = "Rustly Dispatch Python adapter (Celery-like API)"
requires-python = ">=3.9"
dependencies = ["redis>=5.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["rustly_dispatch*"]
